--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "league/flysystem": "^1.0",
         "symfony/http-kernel": "^2.7",
         "symfony/console": "^2.7",
-        "league/container": "^1.3"
+        "league/container": "^1.3",
+        "vlucas/phpdotenv": "^2.0",
+        "league/url": "^3.3"
     },
     "autoload": {
       "psr-4": {
