--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/console": "^2.7",
         "league/container": "^1.3",
         "vlucas/phpdotenv": "^2.0",
-        "league/url": "^3.3"
+        "league/url": "^3.3",
+        "league/flysystem-dropbox": "^1.0"
     },
     "autoload": {
       "psr-4": {
